Configured data source with create-drop, detailed AccountService

--- a/notetree-server/build.gradle
+++ b/notetree-server/build.gradle
@@ -32,10 +32,10 @@ dependencies {
 	compile('org.springframework.data:spring-data-rest-hal-browser')
 	compile('org.springframework.boot:spring-boot-starter-hateoas')
 	compile('org.springframework.boot:spring-boot-starter-jooq')
-	compile('org.springframework.boot:spring-boot-starter-security')
+	//compile('org.springframework.boot:spring-boot-starter-security')
 	compile('org.springframework.boot:spring-boot-starter-web')
-	compile('org.springframework.boot:spring-boot-starter-web-services')
+	//compile('org.springframework.boot:spring-boot-starter-web-services')
 	runtime('mysql:mysql-connector-java')
-	runtime('org.postgresql:postgresql')
+	//runtime('org.postgresql:postgresql')
 	testCompile('org.springframework.boot:spring-boot-starter-test')
 }
