--- a/notetree-server/build.gradle
+++ b/notetree-server/build.gradle
@@ -32,6 +32,7 @@ dependencies {
 	compile('org.springframework.data:spring-data-rest-hal-browser')
 	compile('org.springframework.boot:spring-boot-starter-hateoas')
 	compile('org.springframework.boot:spring-boot-starter-jooq')
+	compile('org.jooq:jool:0.9.11')
 	//compile('org.springframework.boot:spring-boot-starter-security')
 	compile('org.springframework.boot:spring-boot-starter-web')
 	//compile('org.springframework.boot:spring-boot-starter-web-services')
